Fix alignment.

--- a/app/assets/stylesheets/partials/objects/search_page/_card.scss
+++ b/app/assets/stylesheets/partials/objects/search_page/_card.scss
@@ -221,7 +221,7 @@
     .search-page-card__day-badge--rounded-right { @include border-right-radius(2px); }
 
 .search-page-card__content-bottom--help {
-    height: 18em;
+    height: 17em;
 }
 .search-page-card__content-bottom {
     color: #777777;
